# dolfinx-extension-template

./: .clang-format  .clang-tidy  LICENSE  README.md  valgrind-python.supp
.github/workflows/: .env  clang-tidy.yml  format.yml  lint.yml  mypy.yml  ruff.yml  test.yml  valgrind.yml
cpp/: CMakeLists.txt
cpp/demo/: CMakeLists.txt
cpp/demo/simple/: CMakeLists.txt  main.cpp
cpp/demo/ufl/: CMakeLists.txt  form.py  main.cpp
cpp/extension_template/: extension_template.cpp  extension_template.hpp
cpp/test/: git_commit_hash.cpp
python/: CMakeLists.txt  extension_template.cpp  pyproject.toml
python/doc/source/: conf.py  index.rst
python/extension_template/: __init__.py
python/test/: test_git_commit_hash.py
