[project]
name = "extension_template"
description = "Dolfinx extension template."
version = "0.0.0"
authors = [{ name = "Paul T. Kühner" }]
dependencies = []

[project.optional-dependencies]
test = ["pytest"]

[build-system]
requires = ["scikit-build-core >=0.10", "nanobind >=1.3.2"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "build-system.requires"
# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"
# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"

[tool.ruff]
target-version = "py312"
line-length = 100
indent-width = 4
