[project]
name = "extension_template"
description = "Dolfinx extension template."
version = "0.0.0"
authors = [{ name = "Paul T. Kühner" }]
dependencies = []

[project.optional-dependencies]
test = ["pytest"]

[build-system]
requires = ["scikit-build-core >=0.10", "nanobind >=1.3.2"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "build-system.requires"
# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"
# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"

[tool.ruff]
target-version = "py312"
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = [
  "A",      # flake8-builtins
  "B",      # flake8-bugbear
  "C4",     # flake8-comprehensions
  "COM",    # flake8-commas
  "E",      # pycodestyle
  "F",      # Pyflakes
  "FLY",    # use f-string not static joins
  "I",      # isort
  "ICN",    # flake8-import-conventions
  "NPY",    # numpy-specific rules
  "NPY201", # numpy 2.x ruleset
  "RUF",    # Ruff-specific rules
  "UP",     # pyupgrade
  "W",      # pycodestyle
  # "CPY",    # flake8-copyright
]
